# Estrutura-de-Dados

./: .gitignore  README.md  README11.md
Arquivos/: README.md  caractere_linhas  caractere_linhas.c  caractere_maiusculas  caractere_maiusculas.c  figuras.txt  linha_figuras  linha_figuras.c  linha_pontos3d  linha_pontos3d.c  linha_subcadeia  linha_subcadeia.c  pontos3d.txt
Busca/: README.md  busca_arvore.c
CMAKE/: README.md  main.c
Conceitos-Fundamentais/: README.md
Controle de Fluxo/: README.md  exemplos_condicoes_lacos.c
Expressões/: README.md  operadores.c
Fila/: README.md  fila.h  fila_lista.c  fila_lista.h  fila_vetor.c  main.c
Funções/: 01_declaracao_ponteiro.c  02_atribuicao_por_ponteiro.c  03_erro_ponteiro_nao_inicializado.c  04_troca_incorreta.c  05_troca_correta.c  06_recursividade_exemplo.c  Makefile  README.md  fatorial_iterativo.c
GCC/: README.md  area.c  area.h  main.c
Lista Encadeada/: lista_encadeada.c
Lista-Encadeada/: README.md
Matrizes/: README.md  matriz.c  matriz.h
Ordenação/: README.md  ordenacao  ordenacao.c
Ordenação/VisualizaçãoSort/: CMakeLists.txt  README.md  sort_simulator.c
PACOTE-CMAKE/: CMakeLists.txt  README.md  main.c
Pilhas/: README.md  main.c  pilha.h  pilha_lista.c  pilha_vetor.c
Tabela de Dispersão/: tabela_hash  texto.txt
Tabela-de-Dispersão/: README.md  tabela_hash.c
Tipos Abstratos/: ponto.c  ponto.h
Tipos de Estruturas/: aluno.c  main.c
Tipos-Abstratos/: README.md  main.c
Tipos-de-Estruturas/: README.md  ponto.c  ponto.h
Vetores e Alocação Dinâmica/: media_variancia.c
Árvores/: README.md  (+2 more)
(+14 files in other folders)
